# flaskblog

./: pyproject.toml  requirements.txt
src/flaskblog/: __init__.py  forms.py  models.py  routes.py
src/flaskblog/main/: routes.py
src/flaskblog/posts/: routes.py
src/flaskblog/templates/: about.html  account.html  create_post.html  home.html  layout.html  login.html  post.html  register.html  reset_request.html  reset_token.html  user_posts.html
src/flaskblog/templates/errors/: 403.html  404.html  500.html
src/flaskblog/users/: forms.py  routes.py  utils.py
