[project]
name = "flaskblog"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruairi O'Donohoe",email = "58832267+ruairiodonohoe@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

[tool.poetry]
packages = [{include = "flaskblog", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
